# twc-sweep-and-grasp-the-dishes

./: .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: config.yaml  simulation.yaml
example/: example.py  example_kist.py
example/manipulator_interface/: motion_planner.py
example/sweep_grasp_planner_interface/: sweep_grasp_planner_interface.py
example/swipe_planner_interface/: swipe_planner_interface.py
launch/: example.launch  server.launch
model/SAC/85/: alpha.pth
scripts/: ros_node.py
scripts/utils/: dish_simulation.py  edge_sampler.py  ee_converter.py  ellipse.py  model.py  utils.py
srv/: GetSweepGraspDishesPath.srv
